fixed over scrollingadding in width, height and  overflow-x hidden.

--- a/styles.css
+++ b/styles.css
@@ -96,10 +96,16 @@ a {
 html,
 body {
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+ 
 }
 
 nav {
@@ -170,6 +176,7 @@ nav {
   transform: translateY(-100%);
 }
 
+
 .nav__links.open {
   transform: translateY(0);
 }
@@ -199,6 +206,7 @@ nav {
   font-style: normal;
   color: #faf9f8;
   margin: 25px;
+
   
 }
 
